# haffman_algorithm

./: CMakeLists.txt  Makefile  decode.cpp  encode.cpp  haffman_algorithm.cpp  haffman_algorithm.h  readme.md
